output bug for char len that are long fixed just added word-wrap

--- a/apps/style/_main.scss
+++ b/apps/style/_main.scss
@@ -23,6 +23,7 @@
             font-weight: bold;
             color: var(--clr-almost-white);
             width: 85%;
+            word-wrap: break-word;
         }
         button {
             padding: 3px;
